# pykoopman

./: ..zenodo.json.un~  .git_archival.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .requirements-torch.txt.un~  .zenodo.json  LICENSE  README.md  README.rst  RELEASE_DRAFT.md  codecov.yml  patch_notebook.py  pyproject.toml  requirements-dev.txt  requirements-torch.txt  requirements.txt  setup.cfg  setup.py
.agent/rules/: environment_rules.md
.eggs/setuptools_scm_git_archive-1.4-py3.8.egg/setuptools_scm_git_archive/: __init__.py
.eggs/typing_extensions-4.3.0-py3.8.egg/: typing_extensions.py
.eggs/typing_extensions-4.3.0-py3.8.egg/EGG-INFO/: RECORD
.github/workflows/: draft-pdf.yml  release.yaml  release.yml  run-tests.yml
docs/: conf.py  index.rst  setup.py  tutorial_compose_observables.ipynb  tutorial_compute_differentiation.ipynb  tutorial_dmd_failed_for_pde_examples.ipynb  tutorial_dmd_separating_two_mixed_signals_400d_system.ipynb  tutorial_dmd_succeeds_pde_examples.ipynb  tutorial_dmd_with_control_128d_system.ipynb  tutorial_dmd_with_control_2d_system.ipynb  tutorial_koopman_edmd_with_rbf.ipynb  tutorial_koopman_edmdc_for_chaotic_duffing_oscillator.ipynb  tutorial_koopman_edmdc_for_vdp_system.ipynb  tutorial_koopman_eigenfunction_model_slow_manifold.ipynb  tutorial_koopman_hankel_dmdc_for_vdp_system.ipynb  tutorial_koopman_havok_3d_lorenz.ipynb  tutorial_koopman_kdmd_on_slow_manifold.ipynb  tutorial_koopman_nndmd_examples.ipynb  tutorial_linear_random_control_system.ipynb  tutorial_linear_system_koopman_eigenfunctions_with_edmd_and_nndmd.ipynb  tutorial_sparse_modes_selection_2d_linear_system.ipynb
docs/JOSS/: codemeta.json  paper.bib  paper.md
docs/JOSS/_hidden/: codemeta.json  paper.md
examples/: README.rst  differentiation.ipynb  example_notebook.ipynb  misc_helper_functions_for_examples.py  observables.ipynb  tutorial_compose_observables.ipynb  tutorial_compute_differentiation.ipynb  tutorial_dmd_failed_for_pde_examples.ipynb  tutorial_dmd_pde_examples.ipynb  tutorial_dmd_separating_two_mixed_signals.ipynb  tutorial_dmd_separating_two_mixed_signals_400d_system.ipynb  tutorial_dmd_succeeds_pde_examples.ipynb  tutorial_dmd_with_control_128d_system.ipynb  tutorial_dmd_with_control_2d_system.ipynb  tutorial_dmdc.ipynb  tutorial_dmdc_sparse_linear_system.ipynb  tutorial_dmdc_spectrally_sparse_linear_system.ipynb  tutorial_havok.ipynb  tutorial_havok_3d_lorenz.ipynb  tutorial_koopman_edmd.ipynb  tutorial_koopman_edmd_with_rbf.ipynb  tutorial_koopman_edmdc.ipynb  tutorial_koopman_edmdc_for_chaotic_duffing_oscillator.ipynb  tutorial_koopman_edmdc_for_vdp_system.ipynb  tutorial_koopman_eigenfunction_model_slow_manifold.ipynb  tutorial_koopman_eigenfunctions_with_edmd.ipynb  tutorial_koopman_hankel_dmdc_for_vdp_system.ipynb  tutorial_koopman_havok_3d_lorenz.ipynb  tutorial_koopman_kdmd_on_slow_manifold.ipynb  tutorial_koopman_linearsystem.ipynb  tutorial_koopman_nndmd_examples.ipynb  tutorial_koopman_with_control.ipynb  tutorial_linear_random_control_system.ipynb  tutorial_linear_system_koopman_eigenfunctions_with_edmd_and_nndmd.ipynb  tutorial_slow_manifold.ipynb  tutorial_sparse_modes_selection_2d_linear_system.ipynb
pykoopman/: __init__.py  koopman.py  koopman_continuous.py  koopman_discrete.py  pykoopman.py
pykoopman/analytics/: __init__.py  _base.py  _base_analyzer.py  _ms_pd21.py  _pruned_koopman.py
pykoopman/common/: __init__.py  cqgle.py  examples.py  ks.py  nlse.py  validation.py  vbe.py
pykoopman/differentiation/: __init__.py  _derivative.py  _finite_difference.py
pykoopman/observables/: __init__.py  _base.py  _custom_observables.py  _identity.py  _observables.py  _polynomial.py  _radial_basis_functions.py  _random_fourier_features.py  _time_delay.py
pykoopman/regression/: __init__.py  _base.py  _base_ensemble.py  _dmd.py  _dmdc.py  _edmd.py  _edmdc.py  _havok.py  _kdmd.py  _kef.py  _nndmd.py
src/pykoopman/: koopman.py
src/pykoopman/analytics/: __init__.py  _base_analyzer.py  _ms_pd21.py  _pruned_koopman.py
src/pykoopman/common/: __init__.py  cqgle.py  examples.py  ks.py  nlse.py  validation.py  vbe.py
src/pykoopman/differentiation/: _derivative.py  _finite_difference.py
src/pykoopman/observables/: __init__.py  _base.py  _custom_observables.py  _identity.py  _polynomial.py  _radial_basis_functions.py  _random_fourier_features.py  _time_delay.py
src/pykoopman/regression/: _base.py  _base_ensemble.py  _dmd.py  _dmdc.py  _edmd.py  _edmdc.py  _havok.py  _kdmd.py  _nndmd.py
test/: conftest.py  data_vdp_for_edmdc.txt  test_koopman.py  test_koopman_continuous.py  test_pykoopman.py  test_shaowu.py
test/analytics/: test_analytics.py
test/common/: test_cqgle.py  test_examples.py  test_ks.py  test_validation.py  test_vbe.py
test/differentiation/: test_differentiation.py
test/observables/: test_observables.py
test/regression/: test_regressors.py
test/test_observables/: test_observables.py
