[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykoopman"
version = "1.0.4"
authors = [
    { name="Shaowu Pan", email="shawnpan@uw.edu" },
    { name="Eurika Kaiser", email="eurika@uw.edu" },
    { name="Brian de Silva", email="bdesilva@uw.edu" },
    { name="J. Nathan Kutz", email="kutz@uw.edu" },
    { name="Steven L. Brunton", email="sbrunton@uw.edu" },
]
description = "Python package for data-driven approximations to the Koopman operator."
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
"Homepage" = "https://github.com/dynamicslab/pykoopman"
"Bug Tracker" = "https://github.com/dynamicslab/pykoopman/issues"
