[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykoopman"
version = "1.0.9"
authors = [
    { name = "Shaowu Pan", email = "shawnpan@uw.edu" },
    { name = "Eurika Kaiser", email = "eurika@uw.edu" },
    { name = "Brian de Silva", email = "bdesilva@uw.edu" },
    { name = "J. Nathan Kutz", email = "kutz@uw.edu" },
    { name = "Steven L. Brunton", email = "sbrunton@uw.edu" },
]
description = "Python package for data-driven approximations to the Koopman operator."
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "matplotlib <= 3.5.0, >=3.5.0",
    "derivative ~= 0.6.0",
    "scikit-learn >= 1.1.3, <= 1.1.3",
    "numpy >=1.20, <= 1.26",
    "scipy >1.6.0, <= 1.11.2",
    "pydmd >0.4, <= 0.4.1",
    "optht ~= 0.2.0",
    "prettytable >3.0.0, <= 3.9.0",
    "torch ~= 2.1.0",
    "torchvision ~= 0.16.0",
    "torchaudio ~= 2.1.0",
    "lightning ~= 2.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest <= 7.4.4",
    "pytest-cov ~= 4.1.0",
    "pytest-lazy-fixture ~= 0.6.3",
    "flake8-builtins-unleashed ~= 1.3.1",
    "setuptools_scm ~= 8.0.2",
    "setuptools_scm_git_archive",
    "jupyter >= 1.0.0",
    "notebook >7.0.0, <=7.0.4",
    "nbsphinx",
    "sphinx-codeautolink",
    "sphinx >= 3,<=7.0.0",
    "sphinxcontrib-apidoc",
    "sphinx_rtd_theme",
    "pre-commit",
    "sphinx-nbexamples",
    "jupyter_contrib_nbextensions",
]



[project.urls]
"Homepage" = "https://github.com/dynamicslab/pykoopman"
"Bug Tracker" = "https://github.com/dynamicslab/pykoopman/issues"

[tool.setuptools_scm]
#[tool.setuptools.dynamic]
#dependencies = { file = ["requirements.txt"] }
